fix(elements): style fixes - Fix missing rounded property type for input/search - Fix ellipsis/clipping on badges - Fix icon render flash on large sets - Fix dot default display - Improved Logging - Detect possible invalid grid structures - Fix missing card container styles - Fix missing toolbar container styles

--- a/projects/elements/src/icon/icon.css
+++ b/projects/elements/src/icon/icon.css
@@ -4,8 +4,6 @@
   --height: var(--nve-ref-size-400);
   display: inline-flex;
   contain: layout;
-  content-visibility: auto;
-  contain-intrinsic-size: var(--width) var(--height);
 }
 
 [internal-host] {
